<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="match_parent"
    tools:context=".view.ActivitySolicitacao">

    <EditText
        android:id="@+id/motivo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/bg_edittext_rounded"
        android:ems="10"
        android:hint="@string/motivo"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motivo_label" />

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/aprovar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/motivo"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/motivo"
        app:layout_constraintTop_toBottomOf="@+id/motivo"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="Nome:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_col"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:hint="@string/nome_colaborador"
        android:background="@drawable/bg_edittext_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/departamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Departamento:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_col" />

    <TextView
        android:id="@+id/atividade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Atividade:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/depart_col" />

    <EditText
        android:id="@+id/ativ_col"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:hint="@string/atividade"
        android:background="@drawable/bg_edittext_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atividade" />

    <EditText
        android:id="@+id/depart_col"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:hint="@string/departamento"
        android:background="@drawable/bg_edittext_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departamento" />

    <TextView
        android:id="@+id/periodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Periodo:"
        app:layout_constraintTop_toBottomOf="@+id/ativ_col"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/perio_col"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:hint="@string/periodo"
        android:background="@drawable/bg_edittext_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodo" />

    <TextView
        android:id="@+id/motivo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Motivo:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perio_col" />


</androidx.constraintlayout.widget.ConstraintLayout>